# cplings

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exercises/01_variables/: CMakeLists.txt  variables1.cpp  variables2.cpp  variables3.cpp  variables4.cpp  variables5.cpp  variables6.cpp  variables7.cpp  variables8.cpp
exercises/02_functions/: CMakeLists.txt  README.md  functions1.cpp  functions2.cpp  functions3.cpp  functions4.cpp  functions5.cpp  functions6.cpp
exercises/03_if/: CMakeLists.txt  README.md  if1.cpp  if2.cpp
exercises/04_pointers_references/: CMakeLists.txt  pointers_references1.cpp  pointers_references2.cpp
exercises/05_classes/: CMakeLists.txt  classes1.cpp  classes2.cpp  classes3.cpp  classes4.cpp
exercises/06_raii/: CMakeLists.txt  README.md  raii1.cpp  raii2.cpp
exercises/07_containers/: CMakeLists.txt  README.md  containers1.cpp  containers2.cpp  containers3.cpp
exercises/08_ownership/: CMakeLists.txt  README.md  ownership1.cpp  ownership2.cpp  ownership3.cpp  ownership4.cpp  ownership5.cpp  ownership6.cpp
exercises/09_templates/: CMakeLists.txt  README.md  templates1.cpp  templates2.cpp  templates3.cpp  templates4.cpp  templates5.cpp  templates6.cpp  templates7.cpp
exercises/10_security/: CMakeLists.txt  README.md  security1.cpp  security2.cpp  security3.cpp  security4.cpp
hints/01_variables/: variables1.md  variables2.md  variables4.md  variables5.md  variables6.md  variables7.md  variables8.md
hints/02_functions/: functions1.md
hints/09_templates/: templates5.md
hints/10_security/: security1.md  security2.md  security3.md  security4.md
tests/: main_tester.cpp
